phrase overflow fixes

--- a/app/assets/stylesheets/book-entries.styl
+++ b/app/assets/stylesheets/book-entries.styl
@@ -77,6 +77,7 @@ ul.bookEntryList
               display inline-block
               clear left
               margin 0
+              width 100%
 
               .language
                 text-transform capitalize
@@ -85,10 +86,11 @@ ul.bookEntryList
                 text-align center
                 padding 0
                 margin 0
+                max-width 45%
 
               img
                 float left
-                margin 0 10px
+                margin 0
                 padding 0 4px
 
           .meta
@@ -104,6 +106,8 @@ ul.bookEntryList
               font-size .8em
               color #aaa
               font-weight 100
+              white-space normal
+              width 100%
 
               &.date
                 line-height 2.2
